tests/baselines/reference/parserIndexSignature3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature3.ts (1 errors) ====
    interface I {
      [a?]
       ~
!!! error TS1019: An index signature parameter cannot have a question mark.
    }